Fix overflow on cost panel (still needs more work; make window height very small)

--- a/frontend/app/modules/cloud-launcher/launcherUi/style.less
+++ b/frontend/app/modules/cloud-launcher/launcherUi/style.less
@@ -62,6 +62,8 @@ launcher-ui {
 
       padding: 0 1em;
 
+      overflow-y: auto;
+
       .header {
         margin-bottom: 0.25em;
 
